Fixed dark mode color on inlineBlocks

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -43,13 +43,14 @@
     background-color: $dark-background-color;
   }
 
-  .linkblock {
+  .linkblock,
+  .inlineLinkBlock {
     &:hover {
       background-color: #464b66;
     }
   }
   .linkImage {
-    background-image: url("../assets/lightLink.png");
+    background-image: url('../assets/lightLink.png');
   }
   .hover-border {
     @include borderAnimation($dark-font-color);
@@ -61,6 +62,6 @@
     border: 2px solid $dark-font-color;
   }
   .searchBarIcon {
-    background-image: url("../assets/searchDark.png");
+    background-image: url('../assets/searchDark.png');
   }
 }
